# dx

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dx.yaml  install.sh  public-docs  uninstall.sh
.github/: ISSUE_TEMPLATE.md
.github/actions/setup-dx/: action.yml
.github/workflows/: dx-dogfood.yml  dx-install-test.yml  dx-release.yml  rust.yml
crates/dx-overlay-cpu/: Cargo.toml
crates/dx-overlay-cpu/src/: lib.rs
crates/dx-plugin-asciinema/: Cargo.toml
crates/dx-plugin-asciinema/src/: lib.rs
crates/dx-sdk/: Cargo.toml
crates/dx-sdk/src/: lib.rs
docs/product-specs/: asciinema-live-remote-control.md
scripts/: demo_bolt.sh  demo_lovable.sh  demo_record.sh  demo_record_bolt.sh  demo_record_lovable.sh  increment_build.sh  install.sh  launch_cursor.sh  macos_sign_and_notarize.sh  src_tag_current_version.sh
src/: asciinema.rs  config.rs  exec.rs  frame.rs  lib.rs  main.rs  markdown.rs  menu.rs  motd.rs  plugin.rs  term.rs  theme.rs  view.rs
src/app/: commands.rs  mod.rs  suggestion_router.rs
src/checks/: context.rs  env_example_check.rs  mod.rs  node_deps_check.rs  runner.rs  types.rs
src/components/: form.rs  input.rs  select.rs  statusbar.rs
src/overlay/: cpu.rs
src/screens/: config.rs  form.rs  menu.rs  output.rs
tests/: checks_and_router.rs  exit_codes.rs  motd_asciinema_menu_markdown.rs
