[package]
name = "dx"
version = "2025.9.0-b223"
edition = "2024"
build = "build-artifacts/build.rs"

[workspace]
members = [
    "crates/dx-sdk",
    "crates/dx-overlay-cpu",
    "crates/dx-plugin-asciinema",
]
resolver = "2"

[dependencies]
ansi-to-tui = "3"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
pulldown-cmark = "0.10"
ratatui = "0.28"
sysinfo = "0.31"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
portable-pty = "0.8"
serde_yaml = "0.9"
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
url = "2"
vt100 = "0.15"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "sync"] }
dx-sdk = { path = "crates/dx-sdk" }
libloading = "0.8"

# Note: dx-sdk is introduced as a workspace member but not yet used by dx.
# When integrating, add: dx-sdk = { path = "crates/dx-sdk" }

[dev-dependencies]
tempfile = "3"
