[package]
name = "dx-overlay-cpu"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dx-sdk = { path = "../dx-sdk" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.31"
tokio = { version = "1", features = ["time", "rt", "macros", "sync"] }

